--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-  <!-- TO RUN IN BROWSER:
+<!-- TO RUN IN BROWSER:
     1. Install vscode extension Name: open in `browser open-in-browser` by TechER
     2. Right click html file and either run in default browser or another browser
   -->
-
 
 <!DOCTYPE html>
 <html lang="en">
@@ -10,23 +9,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML/CSS Studio</title>
     <!-- import CSS styles -->
-    <link rel="stylesheet" href="styles.css" /> 
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <!-- page content goes into <body> -->
   <body>
     <div id="logoBar">
       <h1>Welcome to 100 Acre Wood!</h1>
-      <img id="siteLogo" alt="Pooh-bear site logo" src="./assets/Header.png"/>
+      <img
+        id="siteLogo"
+        alt="Pooh-bear site logo"
+        src="./assets/Header.png"
+        alt="This is an image of Pooh and friends holding up the letters UIUX."
+      />
       <h3>We're glad you're here :D</h3>
     </div>
-    <hr/>
+    <hr />
     <div id="staffGallery">
-      <img class="galleryImage" src="./assets/Eeyore-Eh.png"/>
-      <img class="galleryImage" src="./assets/Eeyore-Zz.png"/>
-      <img class="galleryImage" src="./assets/Kanga-Roo.png"/>
-      <img class="galleryImage" src="./assets/Owl-Phone.png"/>
+      <div class="card">
+        <img
+          class="galleryImage"
+          src="./assets/Eeyore-Eh.png"
+          alt="This is an image of Eoyore upside down."
+        />
+        <div class="card-details">
+          <hr />
+          <p><b>Name:</b> Eeyore Eh</p>
+        </div>
+      </div>
+      <div class="card">
+        <img
+          class="galleryImage"
+          src="./assets/Eeyore-Zz.png"
+          alt="This is an image of Eeyore sleeping."
+        />
+        <div class="card-details">
+          <hr />
+          <p><b>Name:</b> Eeyore Zz</p>
+        </div>
+      </div>
+      <div class="card">
+        <img
+          class="galleryImage"
+          src="./assets/Kanga-Roo.png"
+          alt="This is an image of a Kanga Roo"
+        />
+        <div class="card-details">
+          <hr />
+          <p><b>Name:</b> Kanga Roo</p>
+        </div>
+      </div>
+      <div class="card">
+        <img
+          class="galleryImage"
+          src="./assets/Owl-Phone.png"
+          alt="This is an image of an owl holding a phone."
+        />
+        <div class="card-details">
+          <hr />
+          <p><b>Name:</b> Owl Phone</p>
+        </div>
+      </div>
     </div>
   </body>
-
 </html>
